fix: updated calculator design result bar stuck outside of rounded borders, made it smaller

--- a/style.css
+++ b/style.css
@@ -12,9 +12,10 @@ html {
 .container {
   display: flex;
   flex-flow: column wrap;
-  border: 1px solid black;
+  border: 2px solid black;
   width: 700px;
   height: 700px;
+  padding-top: 40px;
   border-radius: 30px;
 }
 
@@ -22,7 +23,9 @@ html {
   box-sizing: border-box;
   display: flex;
   border: 1px solid black;
-  padding: 40px;
+  padding: 25px;
+  margin-left: 20px;
+  margin-right: 20px;
   height: 125px;
   justify-content: flex-end;
   align-items: center;
